Bug 730891, event ctor for StorageEvent, r=sicking,kyle